# libwebp4j

./: .gitignore  Makefile  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: build.yml
native/: CMakeLists.txt  converter.c  converter.h  decode.c  encode.c
setup/: libwebp-macos.sh  libwebp-ubuntu.sh  libwebp-windows.ps1
src/c/: converter.c  decode.c  encode.c  errors.c  errors.h
src/java/me/tagavari/libwebp4j/: NativeLoader.java  WebPDecode.java  WebPEncode.java
src/java/me/tagavari/libwebp4j/data/: WebPBitstreamFeatures.java  WebPDecodedData.java  WebPDecoderOptions.java
src/java/me/tagavari/libwebp4j/exception/: WebPException.java  WebPInvalidInputException.java  WebPNotEnoughDataException.java
src/main/java/me/tagavari/libwebp4j/: NativeLoader.java  WebPDecode.java  WebPEncode.java
src/main/java/me/tagavari/libwebp4j/data/: WebPBitstreamFeatures.java  WebPColorSpace.java  WebPInfo.java
src/test/java/me/tagavari/libwebp4j/: WebPTest.java
src/test/resources/: test.tiff
